--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-@import url("font-awesome.min.css");
+@import url("assets/css/font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic");
 
 /*
